tests/ui/parser/issues/issue-44406.stderr
error: expected one of `!`, `)`, `,`, `.`, `::`, `?`, `{`, or an operator, found `:`
  --> $DIR/issue-44406.rs:3:16
   |
LL |         bar(baz: $rest)
   |                ^ expected one of 8 possible tokens
...
LL |     foo!(true);
   |     ---------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

